--- a/react-client/src/css/main.css
+++ b/react-client/src/css/main.css
@@ -32,7 +32,6 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  /* #9e5a63 */
 }
 
 .nav-home {
@@ -351,11 +350,9 @@ span {
 /* ----=Home=---- */
 
 .home {
-  margin-top: -15px;
-  margin-left: -10px;
-  margin-right: -10px;
-  padding-top: 70px;
-  background-color: white;
+  /* width: 100%;
+  padding-top: 500px;
+  padding-bottom: 500px; */
 }
 
 .home-title2 {
@@ -417,84 +414,84 @@ span {
 .fast-icon {
   padding: 16px 16px 16px 16px;
   background-color: #66fcf1;
-  border: solid 1px #0b0c10;
   margin-left: -18px;
+  border: solid 1px #0b0c10;
   width: 100px;
   z-index: 9999;
   color: white;
 }
 
 .fast2 {
+  color: #0b0c10;
   font-size: 15px;
   width: 230px;
-  color: #0b0c10;
   margin-top: -20px;
 }
 
 .responsive {
-  margin-left: -10px;
   color: #0b0c10;
+  margin-left: -10px;
 }
 
 .responsive-icon {
+  border: solid 1px #0b0c10;
   padding: 16px 16px 16px 16px;
   background-color: #66fcf1;
   margin-left: -18px;
-  border: solid 1px #0b0c10;
   width: 100px;
   z-index: 9999;
   color: white;
 }
 
 .responsive2 {
+  color: #0b0c10;
   font-size: 15px;
   width: 230px;
   margin-top: -20px;
-  color: #0b0c10;
 }
 
 .intuitive {
-  margin-left: -10px;
   color: #0b0c10;
+  margin-left: -10px;
 }
 
 .intuitive-icon {
+  border: solid 1px #0b0c10;
   padding: 16px 16px 16px 16px;
   background-color: #66fcf1;
   margin-left: -18px;
-  border: solid 1px #0b0c10;
   width: 100px;
   z-index: 9999;
   color: white;
 }
 
 .intuitive2 {
+  color: #0b0c10;
   font-size: 15px;
   width: 230px;
   margin-top: -20px;
-  color: #0b0c10;
 }
 
 .dynamic {
-  margin-left: -6px;
   color: #0b0c10;
+  margin-left: -6px;
 }
 
 .dynamic-icon {
+  border: solid 1px #0b0c10;
   padding: 16px 16px 16px 16px;
   background-color: #66fcf1;
   margin-left: -18px;
   width: 100px;
   z-index: 9999;
-  border: solid 1px #0b0c10;
   color: white;
 }
 
 .dynamic2 {
+  color: #0b0c10;
   font-size: 15px;
   width: 230px;
   margin-top: -20px;
-  color: #0b0c10;
 }
 
 @-webkit-keyframes skills-slide {
@@ -556,12 +553,14 @@ span {
 } */
 
 .me-title {
+  color: #0b0c10;
   margin-top: 0px;
   font-size: 25px;
   margin-left: 8%;
 }
 
 .me-description {
+  color: #0b0c10;
   margin-top: -20px;
   font-size: 15px;
   width: 300px;
@@ -569,15 +568,19 @@ span {
 }
 
 .project-page {
+  /* margin-left: 10%; */
   padding-left: 100px;
   padding-right: 120px;
   padding-top: 35px;
+  margin-left: -10px;
+  margin-right: -10px;
   margin-top: 200px;
   padding-bottom: 100px;
-  background-color: #8ee4af;
+  background-color: #1f2833;
 }
 
 .resume-projects-ul li {
+  color: #66fcf1;
   margin-top: 50px;
   text-align: center;
   font-size: 25px;
@@ -590,6 +593,7 @@ span {
 .project-resume-title {
   text-align: center;
   margin-top: 50px;
+  color: #66fcf1;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -645,7 +649,7 @@ span {
 
 .resume-resume {
   width: 300px;
-  border: solid 1px #05386b;
+  border: solid 1px #66fcf1;
 }
 
 .resume-resume:hover {
@@ -660,7 +664,7 @@ span {
 .project-project {
   width: 300px;
   height: 388px;
-  border: solid 1px #05386b;
+  border: solid 1px #66fcf1;
 }
 
 .project-project:hover {
@@ -783,7 +787,7 @@ input {
   margin: 0 auto 10px auto;
   line-height: 30px;
   font-size: 16px;
-  color: white;
+  color: #66fcf1;
   padding: 0 0 0 10px;
   position: relative;
 }
@@ -795,11 +799,11 @@ input {
   height: 30px;
   top: 0;
   z-index: -2;
-  background: #ecf0f1;
+  background: #66fcf1;
 }
 .bar::after {
   content: "";
-  background: #5cdb95;
+  background: #0b0c10;
   height: 30px;
   transition: 0.7s;
   display: block;
