--- a/react-client/src/css/main.css
+++ b/react-client/src/css/main.css
@@ -26,7 +26,7 @@
 }
 
 .nav-options a {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   display: block;
   color: #66fcf1;
   text-align: center;
@@ -35,7 +35,7 @@
 }
 
 .nav-home {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   float: left;
 }
 
@@ -48,7 +48,8 @@
 }
 
 li a:hover {
-  background-color: #45a29e;
+  cursor: pointer;
+  background-color: #1f2833;
 }
 
 .about {
@@ -349,18 +350,12 @@ span {
 
 /* ----=Home=---- */
 
-.home {
-  /* width: 100%;
-  padding-top: 500px;
-  padding-bottom: 500px; */
-}
-
 .home-title2 {
   color: #0b0c10;
   font-size: 40px;
   text-align: center;
   margin-top: 80px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   -webkit-animation-name: title-slide;
   -webkit-animation-duration: 4s;
   animation-name: title-slide;
@@ -385,6 +380,78 @@ span {
   }
 }
 
+.my-social {
+  margin-left: 44.5%;
+  margin-bottom: 250px;
+}
+
+.my-social2 {
+  -webkit-animation-name: social-slide;
+  -webkit-animation-duration: 1s;
+  animation-name: social-slide;
+  animation-duration: 1s;
+}
+
+@-webkit-keyframes social-slide {
+  from {
+    margin-left: -600px;
+  }
+  to {
+    margin-left: 44.5%;
+  }
+}
+
+@keyframes social-slide {
+  from {
+    margin-left: -600px;
+  }
+  to {
+    margin-left: 44.5%;
+  }
+}
+
+.social li {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 25px;
+  margin-right: 4%;
+  display: inline-block;
+  text-decoration: none;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.github-icon {
+  padding: 8px 8px 8px 8px;
+  background-color: #66fcf1;
+  margin-left: -18px;
+  border: solid 1px #0b0c10;
+  width: 30px;
+  border-radius: 4px;
+  z-index: 9999;
+  color: white;
+}
+
+.github-icon:hover {
+  cursor: pointer;
+  background-color: #07e1e9;
+}
+
+.linkedin-icon:hover {
+  cursor: pointer;
+  background-color: #07e1e9;
+}
+
+.linkedin-icon {
+  padding: 8px 8px 8px 8px;
+  background-color: #66fcf1;
+  margin-left: -18px;
+  border: solid 1px #0b0c10;
+  width: 30px;
+  border-radius: 4px;
+  z-index: 9999;
+  color: white;
+}
+
 .my-skills {
   margin-top: 100px;
   margin-left: 10%;
@@ -403,7 +470,7 @@ span {
   margin-right: 4%;
   display: inline-block;
   text-decoration: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .fast {
@@ -417,6 +484,7 @@ span {
   margin-left: -18px;
   border: solid 1px #0b0c10;
   width: 100px;
+  border-radius: 4px;
   z-index: 9999;
   color: white;
 }
@@ -439,6 +507,7 @@ span {
   background-color: #66fcf1;
   margin-left: -18px;
   width: 100px;
+  border-radius: 4px;
   z-index: 9999;
   color: white;
 }
@@ -457,6 +526,7 @@ span {
 
 .intuitive-icon {
   border: solid 1px #0b0c10;
+  border-radius: 4px;
   padding: 16px 16px 16px 16px;
   background-color: #66fcf1;
   margin-left: -18px;
@@ -483,6 +553,7 @@ span {
   background-color: #66fcf1;
   margin-left: -18px;
   width: 100px;
+  border-radius: 4px;
   z-index: 9999;
   color: white;
 }
@@ -546,6 +617,7 @@ span {
   margin-top: 100px;
   width: 300px;
   border: solid 1px #0b0c10;
+  border-radius: 50%;
 }
 
 /* .me2 {
@@ -555,7 +627,7 @@ span {
 .me-title {
   color: #0b0c10;
   margin-top: 0px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 25px;
   margin-left: 8%;
 }
@@ -564,7 +636,7 @@ span {
   color: #0b0c10;
   margin-top: -20px;
   font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   width: 300px;
   text-align: center;
 }
@@ -589,14 +661,15 @@ span {
   margin-left: 15%;
   display: inline-block;
   text-decoration: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .project-resume-title {
+  font-size: 40px;
   text-align: center;
   margin-top: 50px;
   color: #66fcf1;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .project-resume-title2 {
@@ -652,6 +725,7 @@ span {
 .resume-resume {
   width: 300px;
   border: solid 1px #66fcf1;
+  border-radius: 5px;
 }
 
 .resume-resume:hover {
@@ -667,6 +741,7 @@ span {
   width: 300px;
   height: 388px;
   border: solid 1px #66fcf1;
+  border-radius: 5px;
 }
 
 .project-project:hover {
@@ -723,17 +798,17 @@ span {
 
 .contact-title {
   text-align: center;
-  font-size: 35px;
+  font-size: 40px;
   margin-top: 150px;
   margin-bottom: 100px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .contact-title2 {
   -webkit-animation-name: contact-title-slide;
-  -webkit-animation-duration: 4s;
+  -webkit-animation-duration: 1s;
   animation-name: contact-title-slide;
-  animation-duration: 1.5s;
+  animation-duration: 1s;
 }
 
 @-webkit-keyframes contact-title-slide {
@@ -758,15 +833,44 @@ span {
   margin-top: 30px;
   text-align: center;
   vertical-align: center;
-  margin-bottom: 250px;
 }
 
 .contact-title-p {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 input {
+  background-color: #66fcf1;
+  border: solid 2px #0b0c10;
+  border-radius: 3px;
+  color: #0b0c10;
+  width: 30%;
+  margin: auto;
+  display: block;
+  padding: 10px;
+  margin-bottom: 5px;
+}
+
+.btn {
+  padding: 7px 15px;
+  background-color: #66fcf1;
+  border: solid 1px #0b0c10;
+  border-radius: 3px;
+  color: #0b0c10;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: #07e1e9;
+}
+
+textarea {
+  background-color: #66fcf1;
+  border: solid 2px #0b0c10;
+  border-radius: 3px;
+  color: #0b0c10;
   width: 30%;
   margin: auto;
   display: block;
@@ -781,19 +885,20 @@ input {
 
 .graph-cont {
   margin-left: 35%;
-  margin-top: -475px;
+  margin-top: -450px;
 }
 
 .bar {
   height: 30px;
   max-width: 450px;
-  margin: 0 auto 10px auto;
+  margin: 0 auto 15.4px auto;
   line-height: 30px;
   font-size: 16px;
   color: #66fcf1;
-  padding: 0 0 0 10px;
-  font-family: Arial, Helvetica, sans-serif;
+  padding: 0 0 0 15px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   position: relative;
+  z-index: -1;
 }
 .bar::before {
   content: "";
@@ -841,7 +946,7 @@ input {
 }
 
 .bar4::after {
-  max-width: 75%;
+  max-width: 80%;
 }
 
 .bar5::after {
@@ -858,4 +963,8 @@ input {
 
 .bar8::after {
   max-width: 80%;
+}
+
+.bar9::after {
+  max-width: 60%;
 }
