--- a/react-client/src/css/main.css
+++ b/react-client/src/css/main.css
@@ -58,7 +58,8 @@ li a:hover {
   padding-bottom: 500px;
   width: 100%;
   padding-left: 15px;
-  margin-left: -7px;
+  margin: 0px auto;
+  /* margin-right: auto; */
   background-color: white;
 }
 
@@ -357,7 +358,7 @@ span {
   margin-top: 80px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   -webkit-animation-name: title-slide;
-  -webkit-animation-duration: 4s;
+  -webkit-animation-duration: 1.5s;
   animation-name: title-slide;
   animation-duration: 1.5s;
 }
@@ -461,7 +462,7 @@ span {
 
 .my-skills2 {
   -webkit-animation-name: skills-slide;
-  -webkit-animation-duration: 4s;
+  -webkit-animation-duration: 1.5s;
   animation-name: skills-slide;
   animation-duration: 1.5s;
 }
@@ -585,6 +586,11 @@ span {
   }
 }
 
+.about-me {
+  display: inline-block;
+  width: 100%;
+}
+
 .my-image {
   margin-left: 20%;
   margin-bottom: 50px;
@@ -592,7 +598,7 @@ span {
 
 .my-image2 {
   -webkit-animation-name: my-image-fade;
-  -webkit-animation-duration: 4s;
+  -webkit-animation-duration: 1.5s;
   animation-name: my-image-fade;
   animation-duration: 1.5s;
 }
@@ -631,7 +637,8 @@ span {
   margin-top: 0px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 25px;
-  margin-left: 8%;
+  width: 300px;
+  text-align: center;
 }
 
 .me-description {
@@ -886,14 +893,26 @@ textarea {
   width: 27.5%;
 }
 
+.about-me {
+  /* display: inline-block; */
+  /* margin-left: 35%; */
+  /* margin-top: -450px; */
+}
+
+@media (max-width: 800px) {
+  .bar {
+    visibility: hidden;
+  }
+}
+
 .graph-cont {
-  margin-left: 35%;
+  margin-left: 500px;
   margin-top: -450px;
 }
 
 .bar {
   height: 30px;
-  max-width: 450px;
+  max-width: 440px;
   margin: 0 auto 15.4px auto;
   line-height: 30px;
   font-size: 16px;
