--- a/react-client/src/css/main.css
+++ b/react-client/src/css/main.css
@@ -1,19 +1,55 @@
-.ul {
+/* .ul {
   list-style-type: none;
   overflow: hidden;
   background-color: #0b0c10;
   width: 100%;
   margin-left: -30px;
   border-bottom: solid 2px #66fcf1;
+} */
+
+.navbar {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  /* color: black; */
+  background-color: #0b0c10;
+  border-bottom: solid 2px #66fcf1;
 }
 
-.nav {
+.main-nav {
   position: -webkit-sticky;
   position: sticky;
   top: -2px;
 }
 
-.last {
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #66fcf1;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: #66fcf1;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+  cursor: pointer;
+  color: #66fcf1;
+  background-color: #1f2833;
+}
+/* 
+default .navbar-nav>li>a:hover {
+  color: #333;
+  background-color: transparent;
+} */
+
+.navbar-default .navbar-brand {
+  color: #66fcf1;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+/* .last {
   margin-right: 100px;
 }
 
@@ -23,18 +59,18 @@
 
 .nav-options {
   float: right;
-}
+} */
 
-.nav-options a {
+/* .nav-options a {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   display: block;
   color: #66fcf1;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-}
+} */
 
-.nav-home {
+/* .nav-home {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   float: left;
 }
@@ -45,7 +81,7 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-}
+} */
 
 li a:hover {
   cursor: pointer;
@@ -81,6 +117,28 @@ li a:hover {
 }
 .info6 {
   margin-left: 25%;
+}
+
+@media (max-width: 900px) {
+  .info {
+    margin-top: 15%;
+    margin-left: 5%;
+  }
+  .info2 {
+    margin-left: 5%;
+  }
+  .info3 {
+    margin-left: 5%;
+  }
+  .info4 {
+    margin-left: 5%;
+  }
+  .info5 {
+    margin-left: 5%;
+  }
+  .info6 {
+    margin-left: 5%;
+  }
 }
 
 .css-typing p {
@@ -382,7 +440,6 @@ span {
 }
 
 .my-social {
-  margin-left: 44.5%;
   margin-bottom: 250px;
 }
 
@@ -398,7 +455,7 @@ span {
     margin-left: -600px;
   }
   to {
-    margin-left: 44.5%;
+    margin-left: 0%;
   }
 }
 
@@ -407,15 +464,15 @@ span {
     margin-left: -600px;
   }
   to {
-    margin-left: 44.5%;
+    margin-left: 0%;
   }
 }
 
 .social li {
   margin-top: 20px;
-  text-align: center;
+  /* text-align: center; */
   font-size: 25px;
-  margin-right: 4%;
+  margin-right: 30px;
   display: inline-block;
   text-decoration: none;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -426,7 +483,7 @@ span {
   background-color: #66fcf1;
   margin-left: -18px;
   border: solid 1px #0b0c10;
-  width: 30px;
+  width: 50px;
   border-radius: 4px;
   z-index: 9999;
   color: white;
@@ -436,6 +493,10 @@ span {
   transition: 0.5s;
   cursor: pointer;
   background-color: #07e1e9;
+}
+
+.contact {
+  text-align: center;
 }
 
 .linkedin-icon:hover {
@@ -449,7 +510,7 @@ span {
   background-color: #66fcf1;
   margin-left: -18px;
   border: solid 1px #0b0c10;
-  width: 30px;
+  width: 50px;
   border-radius: 4px;
   z-index: 9999;
   color: white;
@@ -458,6 +519,7 @@ span {
 .my-skills {
   margin-top: 100px;
   margin-left: 10%;
+  /* margin-bottom: 120px; */
 }
 
 .my-skills2 {
@@ -476,6 +538,56 @@ span {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+@media (max-width: 1300px) {
+  .my-skills {
+    margin-left: 5%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .my-skills {
+    margin-left: 0%;
+  }
+  .graph-cont {
+    margin-left: 340px;
+    /* margin-top: -450px; */
+  }
+
+  .about-me {
+    margin-left: -10%;
+  }
+}
+
+@media (max-width: 1150px) {
+  .skills-list li {
+    margin-right: 0px;
+  }
+  /* .graph-cont {
+    margin-top: 0px;
+  } */
+}
+
+@media (max-width: 960px) {
+  .bar {
+    visibility: hidden;
+  }
+  .about-me {
+    margin-left: 8%;
+  }
+  .skills-list li {
+    margin-right: 4%;
+  }
+}
+
+@media (max-width: 500px) {
+  .my-skills {
+    margin-left: 12%;
+  }
+  .about-me {
+    margin-left: -30px;
+  }
+}
+
 .fast {
   margin-left: -20px;
   color: #0b0c10;
@@ -486,7 +598,8 @@ span {
   background-color: #66fcf1;
   margin-left: -18px;
   border: solid 1px #0b0c10;
-  width: 100px;
+  width: 120px;
+  margin-bottom: 5px;
   border-radius: 4px;
   z-index: 9999;
   color: white;
@@ -496,7 +609,6 @@ span {
   color: #0b0c10;
   font-size: 15px;
   width: 230px;
-  margin-top: -20px;
 }
 
 .responsive {
@@ -509,7 +621,8 @@ span {
   padding: 16px 16px 16px 16px;
   background-color: #66fcf1;
   margin-left: -18px;
-  width: 100px;
+  width: 120px;
+  margin-bottom: 5px;
   border-radius: 4px;
   z-index: 9999;
   color: white;
@@ -519,7 +632,6 @@ span {
   color: #0b0c10;
   font-size: 15px;
   width: 230px;
-  margin-top: -20px;
 }
 
 .intuitive {
@@ -533,7 +645,8 @@ span {
   padding: 16px 16px 16px 16px;
   background-color: #66fcf1;
   margin-left: -18px;
-  width: 100px;
+  width: 120px;
+  margin-bottom: 5px;
   z-index: 9999;
   color: white;
 }
@@ -542,7 +655,6 @@ span {
   color: #0b0c10;
   font-size: 15px;
   width: 230px;
-  margin-top: -20px;
 }
 
 .dynamic {
@@ -555,7 +667,8 @@ span {
   padding: 16px 16px 16px 16px;
   background-color: #66fcf1;
   margin-left: -18px;
-  width: 100px;
+  width: 120px;
+  margin-bottom: 5px;
   border-radius: 4px;
   z-index: 9999;
   color: white;
@@ -565,7 +678,7 @@ span {
   color: #0b0c10;
   font-size: 15px;
   width: 230px;
-  margin-top: -20px;
+  /* margin-top: -20px; */
 }
 
 @-webkit-keyframes skills-slide {
@@ -623,7 +736,7 @@ span {
 
 .me {
   margin-top: 100px;
-  width: 300px;
+  width: 280px;
   border: solid 1px #0b0c10;
   border-radius: 50%;
 }
@@ -634,7 +747,7 @@ span {
 
 .me-title {
   color: #0b0c10;
-  margin-top: 0px;
+  margin-top: 5px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 25px;
   width: 300px;
@@ -642,9 +755,9 @@ span {
 }
 
 .me-description {
+  margin-top: -5px;
   color: #0b0c10;
-  margin-top: -20px;
-  font-size: 15px;
+  font-size: 13px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   width: 300px;
   text-align: center;
@@ -654,11 +767,11 @@ span {
   /* margin-left: 10%; */
   padding-left: 100px;
   padding-right: 120px;
-  padding-top: 35px;
+  padding-top: 135px;
   margin-left: -10px;
   margin-right: -10px;
   margin-top: 200px;
-  padding-bottom: 100px;
+  padding-bottom: 200px;
   background-color: #1f2833;
 }
 
@@ -805,6 +918,36 @@ span {
   z-index: 9999;
 }
 
+@media (max-width: 1300px) {
+  .resume-projects {
+    margin-left: -10%;
+  }
+}
+
+@media (max-width: 1020px) {
+  .resume-projects {
+    margin-left: -20%;
+  }
+}
+
+@media (max-width: 950px) {
+  .resume-projects {
+    margin-left: 10%;
+  }
+}
+
+@media (max-width: 750px) {
+  .resume-projects {
+    margin-left: 0%;
+  }
+}
+
+@media (max-width: 550px) {
+  .resume-projects {
+    margin-left: -60%;
+  }
+}
+
 .contact-title {
   text-align: center;
   font-size: 40px;
@@ -850,21 +993,21 @@ span {
   margin-bottom: 20px;
 }
 
-input {
+.form-control {
   background-color: #66fcf1;
   border: solid 2px #0b0c10;
   border-radius: 3px;
   color: #0b0c10;
-  width: 30%;
+  width: 500px;
   margin: auto;
   display: block;
   padding: 10px;
-  margin-bottom: 5px;
+  margin-bottom: -10px;
 }
 
 .btn {
   transition: 0.5s;
-  padding: 7px 15px;
+  padding: 5px 15px;
   background-color: #66fcf1;
   border: solid 1px #0b0c10;
   border-radius: 3px;
@@ -899,7 +1042,7 @@ textarea {
   margin-top: -450px;
 } */
 
-@media (max-width: 1000px) {
+/* @media (max-width: 1000px) {
   .bar {
     visibility: hidden;
   }
@@ -915,7 +1058,7 @@ textarea {
   .nav-options {
     margin-right: 20px;
   }
-}
+} */
 
 .graph-cont {
   margin-left: 500px;
