--- a/react-client/src/css/main.css
+++ b/react-client/src/css/main.css
@@ -12,7 +12,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-  /* color: black; */
+  z-index: 9999;
   background-color: #0b0c10;
   border-bottom: solid 2px #66fcf1;
 }
@@ -21,6 +21,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: -2px;
+  z-index: 9999;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -38,50 +39,11 @@
   color: #66fcf1;
   background-color: #1f2833;
 }
-/* 
-default .navbar-nav>li>a:hover {
-  color: #333;
-  background-color: transparent;
-} */
 
 .navbar-default .navbar-brand {
   color: #66fcf1;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
-/* .last {
-  margin-right: 100px;
-}
-
-.first {
-  margin-left: 80px;
-}
-
-.nav-options {
-  float: right;
-} */
-
-/* .nav-options a {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  display: block;
-  color: #66fcf1;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-} */
-
-/* .nav-home {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  float: left;
-}
-
-.nav-home a {
-  display: block;
-  color: #66fcf1;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-} */
 
 li a:hover {
   cursor: pointer;
@@ -95,7 +57,6 @@ li a:hover {
   width: 100%;
   padding-left: 15px;
   margin: 0px auto;
-  /* margin-right: auto; */
   background-color: white;
 }
 
@@ -441,6 +402,7 @@ span {
 
 .my-social {
   margin-bottom: 250px;
+  margin-left: 0px;
 }
 
 .my-social2 {
@@ -741,10 +703,6 @@ span {
   border-radius: 50%;
 }
 
-/* .me2 {
-  visibility: hidden;
-} */
-
 .me-title {
   color: #0b0c10;
   margin-top: 5px;
@@ -764,7 +722,6 @@ span {
 }
 
 .project-page {
-  /* margin-left: 10%; */
   padding-left: 100px;
   padding-right: 120px;
   padding-top: 135px;
@@ -816,6 +773,21 @@ span {
   }
   to {
     text-align: center;
+  }
+}
+
+.carousel {
+  width: 300px;
+  height: 400px;
+}
+
+.projects {
+  position: absolute;
+}
+
+@media (max-width: 700px) {
+  .projects {
+    position: relative;
   }
 }
 
@@ -930,11 +902,11 @@ span {
   }
 }
 
-@media (max-width: 950px) {
+/* @media (max-width: 950px) {
   .resume-projects {
     margin-left: 10%;
   }
-}
+} */
 
 @media (max-width: 750px) {
   .resume-projects {
